--- a/react/package.json
+++ b/react/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "dependencies": {
     "classnames": "^2.2.6",
+    "qrcode.react": "^0.9.3",
     "react-qr-reader": "^2.2.1"
   }
 }
