--- a/manifest.json
+++ b/manifest.json
@@ -27,7 +27,12 @@
     "vtex.store-footer": "2.x",
     "vtex.minicart": "2.x",
     "vtex.login": "2.x",
-    "vtex.react-vtexid": "4.x"
+    "vtex.react-vtexid": "4.x",
+    "vtex.store-components": "3.x",
+    "vtex.search-result": "3.x",
+    "vtex.telemarketing": "2.x",
+    "vtex.category-menu": "2.x",
+    "vtex.product-details": "1.x"
   },
   "$schema": "https://raw.githubusercontent.com/vtex/node-vtex-api/master/gen/manifest.schema"
 }
